	* improve DHT routing table to return better nodes (lower RTT and closer to target)
	* don't use pointers to resume_data and file_priorities in add_torrent_params
	* allow moving files to absolute paths, out of the download directory
	* make move_storage more generic to allow both overwriting files as well as taking existing ones
	* fix choking issue at high upload rates
	* optimized rate limiter
	* make disk cache pool allocator configurable
	* fix library ABI to not depend on logging being enabled
	* use hex encoding instead of base32 in create_magnet_uri
	* include name, save_path and torrent_file in torrent_status, for improved performance
	* separate anonymous mode and force-proxy mode, and tighten it up a bit
	* add per-tracker scrape information to announce_entry
	* report errors in read_piece_alert
	* DHT memory optimization
	* improve DHT lookup speed
	* improve support for windows XP and earlier
	* introduce global connection priority for improved swarm performance
	* make files deleted alert non-discardable
	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fix building with C++11
	* fix IPv6 support in UDP socket (uTP)
	* fix mingw build issues
	* increase max allowed outstanding piece requests from peers
	* uTP performance improvement. only fast retransmit one packet at a time
	* improve error message for 'file too short'
	* fix piece-picker stat bug when only selecting some files for download
	* fix bug in async_add_torrent when settings file_priorities
	* fix boost-1.42 support for python bindings
	* fix memory allocation issue (virtual addres space waste) on windows

0.16.11 release

	* fix web seed URL double escape issue